<resources>
    <string name="app_name">SignUpForm</string>
    <string name="hintName">Enter a name</string>
    <string name="hintEmail">Enter an Email Address</string>
    <string name="hintPassword">Enter a Password</string>
    <string name="hintPasswordConfirm">re-enter your password</string>
    <string name="save">Save</string>
    <string name="nameError">No name detected</string>
    <string name="emailError">No email detected</string>
    <string name="passwordError">No password detected</string>
    <string name="passwordConfirmError">No password confirm detected</string>
    <string name="passwordMatch">Passwords do not match</string>

</resources>